hid overflow on topbar to remove scrolling issue

--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -7,8 +7,9 @@
   color: white;
   position: fixed;
   top: 0;
-  z-index: 3;
+  z-index: 4;
   transition: all 1s ease;
+  overflow: hidden;
 
   a:link {
     text-decoration: none;
